# elastic-grab-bag

./: .gitignore  README.md  sum_of_cat.sh
es-fieldusage/: Dockerfile  LICENSE.txt  README.md  post4docker.py  pyproject.toml  run_script.py  setup.py
es-fieldusage/docker_test/scripts/: create.sh  destroy.sh
es-fieldusage/src/: local_test.py
es-fieldusage/src/es_fieldusage/: cli.py  commands.py  defaults.py  exceptions.py  main.py  version.py
es-fieldusage/src/es_fieldusage/helpers/: client.py  logging.py  utils.py
es-fieldusage/tests/: __init__.py
es-fieldusage/tests/unit/: test_utils.py
ingest_cat/: README.md  ingest_cat.py  ingest_cat8.py  ingest_cat_file.py  requirements.txt
logstash/redate-logs/: README.md  redate-logs.sh
painless/: script.painless  test_docs.json
painless/normalize_fieldnames/: README.md
pipelines/checkpoint_custom_tcp/: README.md  checkpoint_custom_tcp.json
