[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "es-fieldusage"
authors = [{ name="Elastic", email="info@elastic.co" }]
dynamic = ["version"]
description = "Helping you determine field usage by index"
license = { text="Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
    'elasticsearch',
    'index',
    'field',
    'stats',
    'usage',
]
dependencies = [
    "es_client==8.10.3",
    "ecs-logging==2.1.0",
    "six>=1.16.0",
]

[project.optional-dependencies]
test = [
    "mock",
    "requests",
    "pytest >=7.2.1",
    "pytest-cov",
]
doc = ["sphinx", "sphinx_rtd_theme"]

[tool.hatch.module]
name = "es-fieldusage"

[project.scripts]
es-fieldusage = "es_fieldusage.cli:run"

[project.urls]
Documentation = "https://github.com/untergeek/elastic-grab-bag/es-fieldusage#readme"
Issues = "https://github.com/untergeek/elastic-grab-bag/issues"
Source = "https://github.com/untergeek/elastic-grab-bag/es-fieldusage"

[tool.hatch.version]
path = "src/es_fieldusage/version.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/es_fieldusage tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["es_fieldusage"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["es_fieldusage", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
es_fieldusage = ["src/es_fieldusage", "*/es-fieldusage/src/es_fieldusage"]
tests = ["tests", "*/es-fieldusage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "dist",
    "docs",
    "docker_test",
    "examples",
    "html_docs",
    "tests",
]

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]",
    "mock",
    "requests",
    "pytest >=7.2.1",
    "pytest-cov",
]

[tool.distutils.build_exe]
excludes = ["tcltk", "tkinter", "unittest"]
zip_include_packages = ["certifi"]